Time: 1 ms (85.05%), Space: 42.3 MB (25.31%) - LeetHub